@@ -3,6 +3,7 @@
          +- Using iconv for handling different text encodings
          +- SetTextFrame now allows different encodings
          +- Added --force240 to force the version number to ID3v2.4.0
+         +- Added --strip to remove the whole ID3 Tag from the file
 
 1.11.5 - Fixed a critical bug loosing 10 bytes when creating a ID3 Tag for a raw mp3 file
 1.11.4 - Changed mime-type for artwork (--set-artwork) from image/jpg to image/jpeg to make it standard conform
